--- a/registro.html
+++ b/registro.html
@@ -164,6 +164,10 @@
     <script src="js/main.js"></script>
     <script src="js/filtro.js"></script>
     <script src="loginm/js/formulario.js"></script>
+    <script src="js/mensajes.js"></script>
+
+
+
 </body>
 
 </html>
