--- a/login.html
+++ b/login.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="icon" href="img/logito.png">
+    <link rel="stylesheet" href="efectos/style.css">
+
 </head>
 
 <body class="hidden">
@@ -73,6 +75,7 @@
                         </div>
                 </main>
 
+                <!-- partial -->
             </body>
         </nav>
     </header>b
@@ -83,6 +86,7 @@
         <div class="footer contenedor">
             <div class="marca-logo">
                 <img src="img/logo.png" alt="">
+
             </div>
             <div class="iconos">
                 <i class="fa-brands fa-facebook"></i>
