--- a/index.html
+++ b/index.html
@@ -8,16 +8,26 @@
     <title>Home</title>
 
     <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="boton/styleB.css">
+    <link rel="stylesheet" href="dist/styleS.css">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="icon" href="img/logito.png">
 </head>
 
 <body class="hidden">
+    <!-- Boton hacia arriba -->
+    <a class="ir-arriba" javascript:void(0) title="Volver arriba">
+        <span class="fa-stack">
+      <i class="fa fa-circle fa-stack-2x"></i>
+      <i class="fa fa-arrow-up fa-stack-1x fa-inverse"></i>
+    </span>
+    </a>
     <div class="centrado" id="onload">
         <div class="lds-facebook">
             <div></div>
             <div></div>
-            <div></div>
+            <div></div>t
         </div>
     </div>
     <header>
@@ -38,13 +48,13 @@
                     <a href="registro.html">
                         <class="btn-header">Registro</a>
                 </div>
+
                 <div class="icono" id="open">
                     <span>&#9776;</span>
                 </div>
             </div>
         </nav>
         <div class="textos">
-
             <h1>Veterinaria Zafari</h1>
             <h2>¡Cuidamos a tus animales!</h2>
         </div>
@@ -106,6 +116,111 @@
                 </div>
             </div>
         </section>
+        <section class="about" id="servicio">
+            <div class="contenedorDiv">
+
+                <body>
+
+                    <body>
+                        <hr id="hrN">
+                        <div class="containerD">
+                            <div class="slider">
+
+                                <div class="box1 box">
+                                    <div class="bg"></div>
+                                    <div class="details">
+
+                                        <p>
+                                        </p>
+                                        <button>VER</button>
+                                    </div>
+
+                                    <div class="illustration">
+
+                                    </div>
+                                </div>
+
+
+                                <div class="box2 box">
+                                    <div class="bg"></div>
+                                    <div class="details">
+                                        <div class="parent">
+
+                                        </div>
+                                        <button>VER</button>
+                                    </div>
+
+                                    <div class="illustration">
+
+                                    </div>
+                                </div>
+
+                                <div class="box3 box">
+                                    <div class="bg"></div>
+                                    <div class="details">
+                                        <h1>Promocion</h1>
+                                        <p>
+                                        </p>
+                                        <button>VER</button>
+                                    </div>
+
+                                    <div class="illustration">
+
+                                    </div>
+                                </div>
+
+                                <div class="box4 box">
+                                    <div class="bg"></div>
+                                    <div class="details">
+                                        <h1>Promocion</h1>
+                                        <p>
+                                        </p>
+                                        <button>VER</button>
+                                    </div>
+
+                                    <div class="illustration">
+
+                                    </div>
+                                </div>
+
+                                <div class="box5 box">
+                                    <div class="bg"></div>
+                                    <div class="details">
+                                        <h1>Promocion</h1>
+                                        <p>
+                                        </p>
+                                        <button>VER</button>
+                                    </div>
+
+                                    <div class="illustration">
+
+                                    </div>
+                                </div>
+
+                            </div>
+
+
+                            <div class="trail">
+                                <div class="box1 active">1</div>
+                                <div class="box2">2</div>
+                                <div class="box3">3</div>
+                                <div class="box4">4</div>
+                                <div class="box5">5</div>
+                            </div>
+                        </div>
+                        <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
+                        <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CSSRulePlugin3.min.js"></script>
+
+                        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.2/gsap.min.js"></script>
+                            <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.2/CSSRulePlugin.min.js"></script> -->
+
+                    </body>
+
+
+
+
+
+        </section>
         <section class="work contenedor" id="trabajo">
             <h3>Nuestros Productos</h3>
             <p class="after">Hacemos de algo simple algo extraordinario</p>
@@ -125,6 +240,10 @@
                     <div class="textos-work">
                         <h4>VALPO</h4>
                     </div>
+                </div>
+                <div>
+                    <a href="Intalaciones.html">
+                        <class="btn-header">VISITAR</a>
                 </div>
                 <div class="cont-work programacion">
                     <div class="img-work">
@@ -166,14 +285,14 @@
                         <h4>Galeria</h4>
                     </div>
                 </div>
-
+                <hr>
             </div>
         </section>
     </main>
+    <hr id="hrW">
     <footer id="contacto">
         <div class="footer contenedor">
             <div class="marca-logo">
-                <figure id="photo" title="¿Qué hay, bro?" tooltip-dir="left"> </figure>
                 <img src="img/logo.png" alt="">
             </div>
             <div class="iconos">
@@ -191,9 +310,15 @@
 
     </footer>
 
+
+
+
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
     <script src="js/filtro.js"></script>
-</body>
+    <script src="dist/script.js"></script>
+    <script src="boton/script.js"></script>
+
+    </body>
 
 </html>
