--- a/login.html
+++ b/login.html
@@ -23,6 +23,7 @@
         </div>
     </div>
     <header>
+        <p></p>
         <nav id="nav" class="nav1">
             <div class="contenedor-nav">
                 <div class="logo">
@@ -78,7 +79,7 @@
                 <!-- partial -->
             </body>
         </nav>
-    </header>b
+    </header>
     <main>
 
     </main>
