--- a/contacto.html
+++ b/contacto.html
@@ -52,59 +52,52 @@
 
             <body>
                 <div class="contenedorR">
-                    <!-- partial:index.partial.html -->
                     <div class="container">
 
                         <form class="well form-horizontal" action=" " method="post" id="contact_form">
                             <fieldset>
 
-                                <!-- Form Name -->
+                                
                                 <legend>Contactanos</legend>
-
-                                <!-- Text input-->
 
                                 <div class="form-group">
                                     <label class="col-md-4 control-label">Primer nombre</label>
                                     <div class="col-md-4 inputGroupContainer">
                                         <div class="input-group">
                                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                            <input name="first_name" placeholder="First Name" class="form-control" type="text">
+                                            <input name="first_name" placeholder="Primer nombre" class="form-control" type="text">
                                         </div>
                                     </div>
                                 </div>
-
-                                <!-- Text input-->
 
                                 <div class="form-group">
                                     <label class="col-md-4 control-label">Apellido</label>
                                     <div class="col-md-4 inputGroupContainer">
                                         <div class="input-group">
                                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                            <input name="last_name" placeholder="Last Name" class="form-control" type="text">
+                                            <input name="last_name" placeholder="Apellido" class="form-control" type="text">
                                         </div>
                                     </div>
                                 </div>
 
-                                <!-- Text input-->
+                                
                                 <div class="form-group">
                                     <label class="col-md-4 control-label">Gmail</label>
                                     <div class="col-md-4 inputGroupContainer">
                                         <div class="input-group">
                                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                                            <input name="email" placeholder="E-Mail Address" class="form-control" type="text">
+                                            <input name="email" placeholder="Correo electronico" class="form-control" type="text">
                                         </div>
                                     </div>
                                 </div>
 
-
-                                <!-- Text input-->
 
                                 <div class="form-group">
                                     <label class="col-md-4 control-label">Numero de contacto </label>
                                     <div class="col-md-4 inputGroupContainer">
                                         <div class="input-group">
                                             <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-                                            <input name="phone" placeholder="(845)555-1212" class="form-control" type="text">
+                                            <input name="phone" placeholder="9 12345678" class="form-control" type="text">
                                         </div>
                                     </div>
                                 </div>
@@ -116,7 +109,7 @@
                                     <div class="col-md-4 inputGroupContainer">
                                         <div class="input-group">
                                             <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                                            <input name="address" placeholder="Address" class="form-control" type="text">
+                                            <input name="address" placeholder="Mi direccion" class="form-control" type="text">
                                         </div>
                                     </div>
                                 </div>
@@ -128,7 +121,7 @@
                                     <div class="col-md-4 inputGroupContainer">
                                         <div class="input-group">
                                             <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                                            <input name="city" placeholder="city" class="form-control" type="text">
+                                            <input name="city" placeholder="Cuidad" class="form-control" type="text">
                                         </div>
                                     </div>
                                 </div>
@@ -158,7 +151,7 @@
                                     <div class="col-md-4 inputGroupContainer">
                                         <div class="input-group">
                                             <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-                                            <textarea class="form-control" name="comment" placeholder="Project Description"></textarea>
+                                            <textarea class="form-control" name="comentarios" placeholder=" Escriba el texto aqui."></textarea>
                                         </div>
                                     </div>
                                 </div>
