--- a/contacto.html
+++ b/contacto.html
@@ -36,7 +36,8 @@
                     <a href="#" id="enlace-equipo" class="btn-header">Categorias</a>
                     <a href="#" id="enlace-servicio" class="btn-header">Servicios</a>
                     <a href="#" id="enlace-trabajo" class="btn-header">Productos</a>
-                    <a href="#" id="enlace-contacto" class="btn-header">Contacto</a>
+                    <a href="contacto.html">
+                        <class="btn-header">Contacto</a>
                     <a href="login.html">
                         <class="btn-header">Ingreso</a>
                     <a href="registro.html">
@@ -58,7 +59,7 @@
                             <fieldset>
 
                                 
-                                <legend>Contactanos</legend>
+                                <h2>Contactanos</h2>
 
                                 <div class="form-group">
                                     <label class="col-md-4 control-label">Primer nombre</label>
