--- a/registro.html
+++ b/registro.html
@@ -32,7 +32,8 @@
                     <a href="#" id="enlace-equipo" class="btn-header">Categorias</a>
                     <a href="#" id="enlace-servicio" class="btn-header">Servicios</a>
                     <a href="#" id="enlace-trabajo" class="btn-header">Productos</a>
-                    <a href="#" id="enlace-contacto" class="btn-header">Contacto</a>
+                    <a href="contacto.html">
+                        <class="btn-header">Contacto</a>
                     <a href="login.html">
                         <class="btn-header">Ingreso</a>
                     <a href="registro.html">
