--- a/contacto.html
+++ b/contacto.html
@@ -62,24 +62,15 @@
                                 <h2>Contactanos</h2>
 
                                 <div class="form-group">
-                                    <label class="col-md-4 control-label">Primer nombre</label>
+                                    <label class="col-md-4 control-label">Nombre Completo</label>
                                     <div class="col-md-4 inputGroupContainer">
                                         <div class="input-group">
                                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                            <input name="first_name" placeholder="Primer nombre" class="form-control" type="text">
+                                            <input name="first_name" placeholder="Nombres y Apellidos" class="form-control" type="text">
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label">Apellido</label>
-                                    <div class="col-md-4 inputGroupContainer">
-                                        <div class="input-group">
-                                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                            <input name="last_name" placeholder="Apellido" class="form-control" type="text">
-                                        </div>
-                                    </div>
-                                </div>
 
                                 
                                 <div class="form-group">
@@ -94,7 +85,7 @@
 
 
                                 <div class="form-group">
-                                    <label class="col-md-4 control-label">Numero de contacto </label>
+                                    <label class="col-md-4 control-label">Número </label>
                                     <div class="col-md-4 inputGroupContainer">
                                         <div class="input-group">
                                             <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
@@ -103,32 +94,7 @@
                                     </div>
                                 </div>
 
-                                <!-- Text input-->
-
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label">Direccion</label>
-                                    <div class="col-md-4 inputGroupContainer">
-                                        <div class="input-group">
-                                            <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                                            <input name="address" placeholder="Mi direccion" class="form-control" type="text">
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Text input-->
-
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label">Ciudad</label>
-                                    <div class="col-md-4 inputGroupContainer">
-                                        <div class="input-group">
-                                            <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-                                            <input name="city" placeholder="Cuidad" class="form-control" type="text">
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Select Basic -->
-
+                                
                                 <div class="form-group">
                                     <label class="col-md-4 control-label">Local</label>
                                     <div class="col-md-4 selectContainer">
