--- a/registro.html
+++ b/registro.html
@@ -29,15 +29,11 @@
                 <div class="enlaces" id="enlaces">
                     <a href="index.html">
                         <class="btn-header">Inicio</a>
-                    <a href="#" id="enlace-equipo" class="btn-header">Categorias</a>
-                    <a href="#" id="enlace-servicio" class="btn-header">Servicios</a>
-                    <a href="#" id="enlace-trabajo" class="btn-header">Productos</a>
+                    <a href="galeria.html" title="Mi enlace">Galeria</a>
                     <a href="contacto.html">
                         <class="btn-header">Contacto</a>
                     <a href="login.html">
                         <class="btn-header">Ingreso</a>
-                    <a href="registro.html">
-                        <class="btn-header">Registro</a>
                 </div>
                 <div class="icono" id="open">
                     <span>&#9776;</span>
