--- a/Intalaciones.html
+++ b/Intalaciones.html
@@ -40,6 +40,7 @@
                     <a href="#" id="enlace-servicio" class="btn-header">Servicios</a>
                     <a href="#" id="enlace-trabajo" class="btn-header">Productos</a>
                     <a href="#" id="enlace-contacto" class="btn-header">Contacto</a>
+                    <a href="galeria.html" title="Mi enlace">Galeria</a>
                     <a href="login.html">
                         <class="btn-header">Ingreso</a>
                     <a href="registro.html">
