--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <a href="#" id="enlace-equipo" class="btn-header">Categorias</a>
                     <a href="#" id="enlace-servicio" class="btn-header">Servicios</a>
                     <a href="#" id="enlace-trabajo" class="btn-header">Productos</a>
+                    <a href="galeria.html" title="Mi enlace">Galeria</a>
                     <a href="contacto.html">
                         <class="btn-header">Contacto</a>
                     <a href="login.html">
@@ -65,6 +66,7 @@
             <h3>Nuestros productos</h3>
             <p class="after">para tu mascota</p>
             <div class="card">
+
                 <div class="content-card">
                     <div class="people">
                         <img src="img/cat.webp" alt="">
@@ -241,10 +243,6 @@
                     <div class="textos-work">
                         <h4>VALPO</h4>
                     </div>
-                </div>
-                <div>
-                    <a href="Intalaciones.html">
-                        <class="btn-header">VISITAR</a>
                 </div>
                 <div class="cont-work programacion">
                     <div class="img-work">
